--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ body{
 .splash-container{
   height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 a.anchor {
